--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 	<build>
 		<finalName>Ecomm</finalName>
 		<plugins>
+			<plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-war-plugin</artifactId>
+                                <version>3.1.0</version>
+                        </plugin>
 			<plugin> 
 				<groupId>org.apache.tomcat.maven</groupId> 
 				<artifactId>tomcat7-maven-plugin</artifactId> 
